--- a/frontend/components/PetNft.module.css
+++ b/frontend/components/PetNft.module.css
@@ -4,11 +4,26 @@
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
-  max-width: 300px; /* Add a max-width to the card to limit its size */
-  margin: 0 auto;
+  max-width: 500px; /* Add a max-width to the card to limit its size */
+  margin: 10px;
   flex: 1 0 200px;
 }
 
 .card:hover {
   transform: scale(1.05);
+}
+
+.actions {
+  margin: 5px;
+  gap: 50px;
+}
+
+.actionButtons{
+  width : 100px;
+  height: 30px;
+  margin: 5px;
+  border: 5px;
+  border-radius: 8px;
+  color: rgb(7, 7, 7);
+  background: coral;
 }
