--- a/frontend/components/Sidebar.module.css
+++ b/frontend/components/Sidebar.module.css
@@ -1,12 +1,13 @@
 .sidebar {
   width: 250px;
   height: 100vh;
-  background-color: #60589a;
+  background-color: #6ea9da; 
   color: #010f13;
   padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
+  border-right: 2px solid #070101; /* Add a border to the right side of the sidebar */
 }
 
 .navList {
@@ -20,6 +21,8 @@
 
 .navLink {
   color: #03020c;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: x-large;
   text-decoration: none;
   font-size: 1.2rem;
 }
