--- a/frontend/components/PetNft.module.css
+++ b/frontend/components/PetNft.module.css
@@ -7,6 +7,7 @@
   max-width: 1000px; /* Add a max-width to the card to limit its size */
   margin: 10px;
   flex: 1 0 200px;
+  background-color: white;
 }
 
 .card:hover {
@@ -18,12 +19,16 @@
   gap: 50px;
 }
 
-.actionButtons{
-  width : 120px;
+.actionButtons {
+  width: 120px;
   height: 30px;
   margin: 5px;
   border: 5px;
   border-radius: 8px;
   color: rgb(7, 7, 7);
-  background: rgb(75, 133, 164);
+  background: #e6e6ff;
+}
+
+.actionButtons:hover {
+  background-color: #cdcbf2;
 }
