--- a/frontend/components/Sidebar.module.css
+++ b/frontend/components/Sidebar.module.css
@@ -1,12 +1,11 @@
 .sidebar {
-  width: 250px;
+  width: 210px;
   height: 100vh;
-  background-color: #6ea9da; 
+  background-color: #e6e6ff; 
   color: #010f13;
   position: fixed;
-  top: 78px;
-  left: 0;
-  border-right: 2px solid #070101; /* Add a border to the right side of the sidebar */
+  top: 58px;
+  left: 10;
 }
 
 .navList {
@@ -20,13 +19,13 @@
 }
 
 .navItem:hover{
-  background-color: rgb(186, 221, 252);
+  background-color:#cdcbf2;
 }
 
 .navLink {
-  color: #03020c;
+  text-align: center;
+  color: #180d5b;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: x-large;
+  font-size:larger;
   text-decoration: none;
-
 }
